--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -23,7 +23,7 @@ jobs:
 
             - uses: actions/setup-python@v1
               with:
-                python-version: "3.9.0"
+                python-version: "3.9.x"
 
             - name: Install dependencies
               run: |
