--- a/profile.yml
+++ b/profile.yml
@@ -15,6 +15,8 @@ dbt_hol:
       warehouse: dbt_dev_wh
       schema: public
       threads: 200
+      client_session_keep_alive: False
+      query_tag: github_action_query
     prod:
       type: snowflake
       ######## Please replace with your Snowflake account name
@@ -29,6 +31,8 @@ dbt_hol:
       warehouse: dbt_prod_wh
       schema: public
       threads: 200
+      client_session_keep_alive: False
+      query_tag: github_action_query
 
 default:
      outputs:
