--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -35,7 +35,7 @@ jobs:
 
        # dbt related commands here - run use --target prod/dev to run for specific environments
             - name: Run dbt models
-              run: dbt run --target dev
+              run: dbt run --target dev --models 'models/example/**'
 
            # - name: Test dbt models
             #  run: dbt test --target dev
