--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -9,6 +9,14 @@ config-version: 2
 # This setting configures which "profile" dbt uses for this project.
 profile: 'dbt_hol'
 
+
+#variables for storing RAW table names associated with each collection
+vars:
+  dev_wh: 'COMPUTE_WH'
+  qa_wh: 'COMPUTE_WH'
+  prod_wh: 'COMPUTE_WH'
+
+
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
