--- a/.github/workflows/view.yml
+++ b/.github/workflows/view.yml
@@ -36,7 +36,7 @@ jobs:
 
        # dbt related commands here - run use --target prod/dev to run for specific environments
             - name: Run dbt models
-              run: dbt run --target view --models 'models/view/**'
+              run: dbt run --target view --models 'models/view/**' --state 'models/view/'
 
            # - name: Test dbt models
             #  run: dbt test --target dev
