--- a/.github/workflows/view.yml
+++ b/.github/workflows/view.yml
@@ -33,10 +33,11 @@ jobs:
               run: |
                 pip install dbt-snowflake 
                 dbt deps
-                dbt compile --target view
-
+                
        # dbt related commands here - run use --target prod/dev to run for specific environments
-
+            - name: Run dbt compile
+              run: dbt compile
+              
             - name: dbt mv
               run: mv -Force target/manifest.json . 
               
