--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -31,5 +31,9 @@ jobs:
 
        # dbt related commands here - run use --target prod/qa/dev to run for specific environments
        - name: Run dbt models
-         run: 
-            dbt run --target QA
+         run: |
+                    dbt compile
+                    mv -Force target/manifest.json .
+                    dbt run --target QA
+                    
+            
