--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -34,12 +34,12 @@ jobs:
          run: dbt compile
          
        - name: Upload compiled artifacts
-         uses: actions/upload-artifact@v3
+       - run: echo hello > path/to/artifact/manifest.json
+       - uses: actions/upload-artifact@v4
          with:
           name: dbt-compiled-artifacts
-          path: target/
+          path: target/manifest.json
           
        - name: Run dbt models
-         run: 
-                dbt run --target QA
+         run: dbt run --target QA
             
