--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -37,8 +37,24 @@ jobs:
          uses: actions/upload-artifact@v3
          with:
           name: dbt-compiled-artifacts
-          path: storage/manifest.json
+          path: target/manifest.json
           
+       - name: Download artifacts
+         uses: actions/download-artifact@v3
+         with:
+           name: dbt-compiled-artifacts
+           path: ./target
+       - name: Move artifacts to repository
+         run: |
+            mkdir -p ./dbt_target
+            mv ./target/* ./dbt_target/
+       - name: Commit and push changes
+         run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Add dbt compiled artifacts"
+          git push origin QA
        - name: Run dbt models
          run: dbt run --target QA
             
