--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -49,6 +49,8 @@ jobs:
             mkdir -p ./dbt_target
             mv ./target/* ./dbt_target/
        - name: Commit and push changes
+         env:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
