--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -27,6 +27,8 @@ jobs:
        - name: Install dependencies
          run: |
            pip install dbt-snowflake
+           pip install snowflake-snowpark-python
+           pip install python-helpers
            dbt deps
 
        # dbt related commands here - run use --target prod/qa/dev to run for specific environments
