--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -28,7 +28,7 @@ jobs:
          run: |
            pip install dbt-snowflake
            pip install snowflake-snowpark-python
-           pip install python-helpers
+           pip install python-helper
            dbt deps
 
        # dbt related commands here - run use --target prod/qa/dev to run for specific environments
