--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -29,6 +29,7 @@ jobs:
            pip install dbt-snowflake
            pip install snowflake-snowpark-python
            pip install python-helper
+           pip install python-utils
            dbt deps
 
        # dbt related commands here - run use --target prod/qa/dev to run for specific environments
