--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -28,8 +28,8 @@ jobs:
          run: |
            pip install dbt-snowflake
            pip install snowflake-snowpark-python
-           pip install python-helper
-           easy_install python-utils
+           pip install python-helpers
+           pip install python-utils
            dbt deps
 
        # dbt related commands here - run use --target prod/qa/dev to run for specific environments
