--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -23,7 +23,15 @@ jobs:
        - uses: actions/setup-python@v1
          with:
            python-version: "3.9.x"
+           
+       - name: Load environment variables
+         run: |
+          set -a
+          source config.env
+          set +a
 
+       - name: Use the variable
+         run: echo "The value of MY_VARIABLE is $MY_VARIABLE"
        - name: Install dependencies
          run: |
            pip install dbt-snowflake
