--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -43,10 +43,7 @@ jobs:
            dbt deps
        - name: Run DBT Macro to Drop Tables
          run: |
-          tables=$TABLE_NAME
-          tables_array=(${tables//,/ })
-          tables_json=$(jq -n --argjson tables '[]' '$tables + [env.tables_array[]]')
-          dbt run-operation drop_tables --args "{\"tables\": $tables_json}"
+          dbt run-operation drop_tables --args '{"tables": "$TABLE_NAME"}'
  
        - name: dbt run
          run: |
